# PrintSpider_stm32

./: .cproject  .gitignore  .mxproject  .project  .pvsconfig  CMakeLists.txt  CMakePresets.json  LICENSE  NOTICE  PrintSpider_stm32 Debug.launch  PrintSpider_stm32.ioc  README.md  STM32F411.svd  STM32F411RETX_RAM.ld  pvs.cfg  swo.bat  test.cfg
.github/workflows/: build-analyze.yml  build.yml  ci.yml  deploy.yml  tests.yml
Core/Inc/: FreeRTOSConfig.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Core/Inc/DIO/: ADC.h  DIO.h  STICK.h
Core/Inc/EVHD/: EVHD.h
Core/Inc/EXHD/: EXHD.h
Core/Inc/LED/: ws2812.h
Core/Inc/LOG/: LOG.h
Core/Inc/MOTOR/: MOTOR.h
Core/Inc/OLED/: OLED.h
Core/Inc/OLED/MENU/: MAIN_MENU.h  MENU.h  MENU_RESOURCES.h  SD_MENU.h  SERVICE_MENU.h  WAIT.h
Core/Inc/OLED/MENU/SERVICE_MENU/: SERVICE_IO_MENU.h  S_CLOCK_MENU.h  S_IO_MENU.h  S_SD_MENU.h
Core/Inc/Print/: PRINTCTRL.h  PRINTHEAD.h  print.h  printspider.h
Core/Inc/SD/: SD.h
Core/Src/: freertos.c  main.c  printspider.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  syscalls.c
Core/Src/DIO/: ADC.c  DIO.c  STICK.c
Core/Src/EVHD/: EVHD.c
Core/Src/EXHD/: EXHD.c
Core/Src/LED/: ws2812.c
Core/Src/LOG/: LOG.c
Core/Src/MOTOR/: MOTOR.c
Core/Src/OLED/: OLED.c
Core/Src/OLED/MENU/: MAIN_MENU.c  MENU.c  SD_MENU.c  SERVICE_MENU.c  WAIT.c
Core/Src/OLED/MENU/SERVICE_MENU/: SERVICE_IO_MENU.c  S_CLOCK_MENU.c  S_IO_MENU.c  S_SD_MENU.c
Core/Src/Print/: PRINTCTRL.c  PRINTHEAD.c  print.c  printspider.c
Core/Src/SD/: SD.c
Drivers/CMSIS/Include/: cmsis_compiler.h
Middlewares/ST/STM32_USB_Device_Library/Class/CompositeBuilder/Inc/: usbd_composite_builder.h
Middlewares/ST/STM32_USB_Device_Library/Class/CompositeBuilder/Src/: usbd_composite_builder.c
Middlewares/ST/STM32_USB_Device_Library/Class/MSC/Src/: usbd_msc.c  usbd_msc_bot.c  usbd_printer.c
Middlewares/ST/STM32_USB_Device_Library/Class/PRINTER/Inc/: usbd_printer.h
Middlewares/ST/STM32_USB_Device_Library/Class/PRINTER/Src/: usbd_printer.c
Middlewares/ST/STM32_USB_Device_Library/Core/Inc/: usbd_def.h
USB_DEVICE/App/: usb_device.c  usbd_desc.c  usbd_printer_if.c  usbd_printer_if.h  usbd_storage_if.c
cmake/toolchains/: host-toolchain.cmake  stm32-toolchain.cmake
ssd1306/: ssd1306.c  ssd1306_conf.h
tests/: CMakeLists.txt  test_foo.cpp
tests/Core/Print/: CMakeLists.txt  Print_tests.cpp
tests/cmake/: add_test_runner.cmake
tests/mock/: cmsis_compiler.h  core_cm4.h  stm32f4xx_hal_gpio.h
tests/mock/Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal_gpio.c
